<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.courtcounter.MainActivity">

    <View
        android:layout_width="@dimen/dp1"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp16"
        android:background="@android:color/darker_gray"
        android:layout_above="@id/reset_b"
        android:layout_marginBottom="@dimen/dp16"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp16"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/header_A"
                android:textColor="#616161"
                android:textSize="@dimen/sp16" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp24"
                android:layout_marginTop="@dimen/dp16"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/points0"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp56" />

            <Button
                android:id="@+id/a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp8"
                android:layout_marginLeft="@dimen/dp24"
                android:layout_marginRight="@dimen/dp24"

                android:onClick="winA"
                android:text="@string/point" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/game"
                android:textSize="@dimen/sp16"/>

            <TextView
                android:id="@+id/gameA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/points0"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp56" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sp16"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/header_B"
                android:textColor="#616161"
                android:textSize="@dimen/sp16" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp24"
                android:layout_marginTop="@dimen/dp16"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/points0"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp56" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp8"
                android:layout_marginLeft="@dimen/dp24"
                android:layout_marginRight="@dimen/dp24"
                android:onClick="winB"
                android:text="@string/point" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/game"
                android:textSize="@dimen/sp16"/>

            <TextView
                android:id="@+id/gameB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/points0"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp56" />


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/winner_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/reset_b"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp16"
        android:layout_marginBottom="@dimen/dp24"
        android:textSize="@dimen/sp30" />

    <Button

        android:id="@+id/reset_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp24"
        android:onClick="reset"
        android:text="@string/reset" />


</RelativeLayout>
